# qpang-essence-emulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Skillcards.md  extra sql to execute.txt
cmake/macros/: AutoCollect.cmake  FindMySQL.cmake  GroupSources.cmake
database/: Database dumped data.sql  Database structure dump.sql  add_type_column_to_weapons_table.sql  create_player_gifts_table.sql  create_player_skill_cards_table.sql  create_redeem_code_tables.sql  original_create_qpang_tables.sql  qpang.sql  set_types_for_weapons_in_db.sql
dependencies/: CMakeLists.txt
dependencies/libtomcrypt/: CMakeLists.txt  bits.c
dependencies/tnl/: CMakeLists.txt  eventConnection.cpp  tnl.vcxproj  tnlClientPuzzle.h
extra/patches/: 20120314_version_patch.1337  buy_already_owned_cards.1337  disable_mail.1337
src/: CMakeLists.txt
src/essence.auth/: Authenticator.cpp  Authenticator.h  CMakeLists.txt  main.cpp
src/essence.auth/packets/: AuthPacketHandler.cpp  AuthPacketHandler.h
src/essence.auth/packets/incoming/: HandleHandshakeRequest.h  Handshake.h  LoginRequest.h
src/essence.auth/packets/outgoing/: HandshakeResponse.h  LoginSuccess.h  SendAccountLoginSuccess.h  SendHandshakeResponse.h
src/essence.auth/packets/outgoing/error/: InvalidPassword.h  InvalidUsername.h  InvalidVersion.h  SendInvalidAccountPassword.h  SendInvalidAccountUsername.h  SendInvalidGameVersion.h
src/essence.core/: CMakeLists.txt
src/essence.core/core/: Emulator.cpp  Emulator.h
src/essence.core/core/communication/: PacketHandler.cpp  PacketHandler.h
src/essence.core/core/config/: ConfigManager.cpp  ConfigManager.h
src/essence.core/core/database/: Database.cpp  Database.h  DatabaseDispatcher.cpp  DatabaseDispatcher.h  Statement.cpp  Statement.h  StatementResult.cpp  StatementResult.h
src/essence.game/: CMakeLists.txt  main.cpp
src/essence.game/packets/: LobbyServerPacket.h  SquareServerPacket.h
src/essence.game/packets/lobby/: LobbyPacketHandler.cpp  LobbyPacketHandler.h
src/essence.game/packets/square/: SquarePacketHandler.cpp  SquarePacketHandler.h
src/essence.game/packets/writers/: FriendWriter.h  GiftWriter.h  InventoryCardWriter.h  RoomWriter.h  SquareEntryWriter.h  SquarePlayerWriter.h
src/essence.game/qpang/: Game.cpp  Game.h  ItemID.h  Position.h
src/essence.game/qpang/account/: BanManager.cpp  BanManager.h
src/essence.game/qpang/achievement/: AchievementManager.cpp  AchievementManager.h
src/essence.game/qpang/cache/: CacheManager.cpp  CacheManager.h
src/essence.game/qpang/channel/: Channel.h  ChannelManager.cpp  ChannelManager.h
src/essence.game/qpang/chat/: ChatManager.cpp  ChatManager.h
src/essence.game/qpang/crane/: CraneItem.h  CraneManager.cpp  CraneManager.h
src/essence.game/qpang/helpers/: AABBHelper.cpp  AABBHelper.h  RandomHelper.cpp  RandomHelper.h  TimeHelper.cpp  TimeHelper.h
src/essence.game/qpang/leaderboard/: Leaderboard.cpp  Leaderboard.h
src/essence.utils/: CMakeLists.txt
src/essence.utils/utils/: StringConverter.cpp  StringConverter.h
src/essence.utils/utils/threading/: ThreadPool.h
wiki/skillcards/images/: card_skill_0001_l.dds  card_skill_0001_s.dds  card_skill_0001_ss.DDS  card_skill_0002_l.dds  card_skill_0002_s.dds  card_skill_0002_ss.DDS  card_skill_0003_l.dds  card_skill_0003_s.dds  card_skill_0003_ss.DDS  card_skill_0004_l.dds  card_skill_0004_s.dds  card_skill_0004_ss.DDS  card_skill_0005_l.dds  card_skill_0005_s.dds  card_skill_0005_ss.DDS  card_skill_0006_l.dds  card_skill_0006_s.dds  card_skill_0006_ss.DDS  card_skill_0007_l.dds  card_skill_0007_s.dds  card_skill_0007_ss.DDS  card_skill_0008_l.dds  card_skill_0008_s.dds  card_skill_0008_ss.DDS  card_skill_0009_l.dds  card_skill_0009_s.dds  card_skill_0009_ss.DDS  card_skill_0010_l.dds  card_skill_0010_s.dds  card_skill_0010_ss.DDS  card_skill_0011_l.dds  card_skill_0011_s.dds  card_skill_0011_ss.DDS  card_skill_0012_l.dds  card_skill_0012_s.dds  card_skill_0012_ss.DDS  card_skill_0013_l.dds  card_skill_0013_s.dds  card_skill_0013_ss.DDS  card_skill_0014_l.dds  (+39 more)
(+713 files in other folders)
